# clipping

./: Cargo.toml  readme.md
examples/: main.rs  text.rs
src/: gh.rs  lib.rs  main.rs
