[package]
name = "clipping"
version = "0.1.0"
authors = ["nyradr <nyradr@protonmail.com>"]
description = "Efficient clipping of arbitrary polygons"
readme = "readme.md"
keywords = ["polygon", "clipping", "Greiner", "Hormann", "piston"]
categories = ["games"]
licence = "GPL-3.0+"
license-file = "LICENCE"

[dependencies]
rand="*"
piston_window = "0.75.0"
